[package]
name = "blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
nostr-sdk = "0.9.0"
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }