[package]
name = "blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bitcoin = "0.29.2"
# bitcoincore-rpc = "0.16.0"
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc" }
clap = { version = "4.0.32", features = ["derive"] }
nostr-sdk = "0.12.0"
rand = "0.8.5"
sled = "0.34.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }